# TOSRC

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
TOSRC-Core/: README.md  pyproject.toml
TOSRC-Core/src/tosrc_core/common/bootstrap/: initializer.py
TOSRC-Core/src/tosrc_core/common/config/: config.py
TOSRC-Core/src/tosrc_core/common/interface/: dal.py  net.py  tenant.py
TOSRC-Core/src/tosrc_core/common/utils/: logger.py  price_extractor.py  semantic_classifier.py
TOSRC-Core/src/tosrc_core/data/models/: number_semantic.pkl  number_semantic_vectorizer.pkl
TOSRC-Core/src/tosrc_core/interface/plugin/: i_ner_plugin.py
TOSRC-Core/src/tosrc_core/plugin/manager/: auto_learner.py  llm_annotator.py
TOSRC-Core/src/tosrc_core/resources/: default_intents.json  schema.sql
TOSRC-Core/src/tosrc_core/router/: scheduler.py
TOSRC-Core/src/tosrc_core/router/dispatcher/: router_decision.py
TOSRC-Core/src/tosrc_core/router/strategy/: rule_miner.py  rule_package_manager.py
TOSRC-Core/src/tosrc_core/semantic/: neuron_core.py
TOSRC-Core/src/tosrc_core/semantic/intent/: auto_optimizer.py  cache.py  db.py  migrate_yaml.py  neuron_core.py  sample_collector.py  semantic_core.py
TOSRC-Single/: .gitignore  Dockerfile  README.md  main.py  pytest.ini  requirements.txt  run_simple_tests.sh  run_tests.sh  test_core_import.py  train_ner.py
TOSRC-Single/deploy/: README.md  (+1 more)
docs/: README_zh.md
rules/: rental_rules.json  weather_rules.json
scripts/: run_tests.sh  start.bat  start.sh  test_jsonl.py  test_start.sh  verify.sh
(+171 files in other folders)
