[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tosrc-core"
version = "1.0.0"
description = "TOSRC 语义路由调度引擎核心底座"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "TOSRC Team"}
]
keywords = ["semantic", "router", "nlu", "intent", "offline", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "jieba>=0.42.1",
    "SQLAlchemy>=2.0.20",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "uvicorn>=0.23.2",
]

[project.urls]
Homepage = "https://github.com/TOSRC-AI/TOSRC"
Repository = "https://github.com/TOSRC-AI/TOSRC.git"
Documentation = "https://github.com/TOSRC-AI/TOSRC/tree/main/docs"
"Bug Tracker" = "https://github.com/TOSRC-AI/TOSRC/issues"

[tool.setuptools.packages.find]
where = ["src"]
